Fixing all open issues and refactoring the UI pages